--- a/ViennaAdvantageWeb/Web.config
+++ b/ViennaAdvantageWeb/Web.config
@@ -17,9 +17,10 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+	  <add key="postgresqlConnectionString" value="Server=152.67.0.0;Port=5432;MaxPoolSize=100;SearchPath=public;User Id=viennacrmuser;Password=viennacrmuser;Database=viennacrm_finaldb02"/>
     <!--<add key="oracleConnectionString" value="Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=192.168.0.105)(PORT=1521)))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=orcl)));User Id=manjotbeta;Password=manjotbeta" />-->
     <!--<add key="oracleConnectionString" value="Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=192.168.0.60)(PORT=1521)))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=orcl)));Unicode=true;User Id=puneetbetanew1;Password=puneetbetanew1" />-->
-	  <add key="oracleConnectionString" value="Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=158.101.175.239)(PORT=1521)))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=orcl)));User Id=devpuneetbeta;Password=devpuneetbeta"/>
+	  <!--<add key="oracleConnectionString" value="Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=158.101.175.239)(PORT=1521)))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=orcl)));User Id=devpuneetbeta;Password=devpuneetbeta"/>-->
     <!--<add key="oracleConnectionString" value="Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=192.168.0.164)(PORT=1521)))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=xe)));User Id=standard;Password=standard" />-->
     <add key="licenseType" value="Y" />
     <!--Unicode=True;-->
