--- a/ViennaAdvantageSvc/ViennaAdvantageSvc.csproj
+++ b/ViennaAdvantageSvc/ViennaAdvantageSvc.csproj
@@ -36,13 +36,14 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="BaseLibrary">
-      <HintPath>..\..\..\Framework Breakage Dlls\BaseLibrary.dll</HintPath>
+      <HintPath>..\ViennaAdvantageWeb\DLL\BaseLibrary.dll</HintPath>
     </Reference>
     <Reference Include="CoreLibrary">
-      <HintPath>..\..\..\Framework Breakage Dlls\CoreLibrary.dll</HintPath>
+      <HintPath>..\ViennaAdvantageWeb\DLL\CoreLibrary.dll</HintPath>
     </Reference>
-    <Reference Include="ModelLibrary">
-      <HintPath>..\..\..\Framework Breakage Dlls\ModelLibrary.dll</HintPath>
+    <Reference Include="ModelLibrary, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\ViennaAdvantageWeb\DLL\ModelLibrary.dll</HintPath>
     </Reference>
     <Reference Include="Oracle.ManagedDataAccess, Version=4.122.19.1, Culture=neutral, PublicKeyToken=89b483f429c47342, processorArchitecture=MSIL">
       <HintPath>..\packages\Oracle.ManagedDataAccess.19.6.0\lib\net40\Oracle.ManagedDataAccess.dll</HintPath>
@@ -56,10 +57,10 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="VAModelAD">
-      <HintPath>..\..\..\Framework Breakage Dlls\VAModelAD.dll</HintPath>
+      <HintPath>..\ViennaAdvantageWeb\DLL\VAModelAD.dll</HintPath>
     </Reference>
     <Reference Include="XModel">
-      <HintPath>..\..\..\Framework Breakage Dlls\XModel.dll</HintPath>
+      <HintPath>..\ViennaAdvantageWeb\DLL\XModel.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
