--- a/ViennaAdvantageWeb/Web.config
+++ b/ViennaAdvantageWeb/Web.config
@@ -18,7 +18,8 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="oracleConnectionString" value="Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=130.61.177.127)(PORT=1521)))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=VADBDEV)));User Id=std_betadb;Password=std_betadb" />
+    <!--<add key="oracleConnectionString" value="Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=130.61.177.127)(PORT=1521)))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=VADBDEV)));User Id=std_betadb;Password=std_betadb" />-->
+    <add key="postgresqlConnectionString" value ="Server=152.67.0.0;Port=5432;MaxPoolSize=100;SearchPath=public;User Id=viennacrmuser;Password=viennacrmuser;Database=viennacrm_finaldb02_29082022" />
     <add key="licenseType" value="Y" />
     <!--Unicode=True;-->
     <add key="licenseValue" value="100" />
