--- a/ViennaAdvantageWeb/Web.config
+++ b/ViennaAdvantageWeb/Web.config
@@ -20,8 +20,9 @@
     <!--<add key="postgresqlConnectionString" value="Server=152.67.0.0;Port=5432;MaxPoolSize=100;SearchPath=public;User Id=viennacrmuser;Password=viennacrmuser;Database=viennacrm_finaldb02"/>-->
     <!--<add key="oracleConnectionString" value="Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=192.168.0.105)(PORT=1521)))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=orcl)));User Id=manjotbeta;Password=manjotbeta" />-->
     <!--<add key="oracleConnectionString" value="Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=192.168.0.60)(PORT=1521)))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=orcl)));Unicode=true;User Id=puneetbetanew1;Password=puneetbetanew1" />-->
-	  <add key="oracleConnectionString" value="Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=130.61.177.127)(PORT=1521)))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=VADBDEV)));Unicode=true;User Id=std_betadb;Password=std_betadb" />
+	  <!--<add key="oracleConnectionString" value="Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=130.61.177.127)(PORT=1521)))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=VADBDEV)));Unicode=true;User Id=std_betadb;Password=std_betadb" />-->
     <!--<add key="oracleConnectionString" value="Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=192.168.0.164)(PORT=1521)))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=xe)));User Id=standard;Password=standard" />-->
+    <add key="postgresqlConnectionString" value ="Server=152.67.0.0;Port=5432;MaxPoolSize=100;SearchPath=public;User Id=viennacrmuser;Password=viennacrmuser;Database=viennacrm_finaldb02_29082022" />
     <add key="licenseType" value="Y"/>
     <!--Unicode=True;-->
     <add key="licenseValue" value="100"/>
