--- a/ViennaAdvantageWeb/ViennaAdvantageWeb.csproj
+++ b/ViennaAdvantageWeb/ViennaAdvantageWeb.csproj
@@ -75,7 +75,7 @@
       <HintPath>..\..\VISPRONew_\ViennaAdvantageWeb\Dll\Google.Apis.Tasks.v1.dll</HintPath>
     </Reference>
     <Reference Include="Google.Authenticator">
-      <HintPath>..\..\VISPRONew_\ViennaAdvantageWeb\Dll\Google.Authenticator.dll</HintPath>
+      <HintPath>DLL\Google.Authenticator.dll</HintPath>
     </Reference>
     <Reference Include="Google.GData.Client">
       <HintPath>..\..\VISPRONew_\ViennaAdvantageWeb\Dll\Google.GData.Client.dll</HintPath>
@@ -317,9 +317,9 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>3972</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost/VA003</IISUrl>
+          <IISUrl>http://localhost/VA003_4.X</IISUrl>
           <OverrideIISAppRootUrl>True</OverrideIISAppRootUrl>
-          <IISAppRootUrl>http://localhost/VA003</IISAppRootUrl>
+          <IISAppRootUrl>http://localhost/VA003_4.X</IISAppRootUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
